made the view engine work

--- a/templates/simple.html
+++ b/templates/simple.html
@@ -8,7 +8,7 @@
 <script src="script.js"></script>
 <body>
 <input id = "text" type="text" onsubmit="Send()" />
-<input id="clickMe" type="button" value="Send" onclick="Send()" />
+<input id="button" type="button" value="Send" />
 <div id="test"></div>
 </body>
 </html>
