--- a/templates/simple.jinja2
+++ b/templates/simple.jinja2
@@ -10,11 +10,11 @@
 
     }
 $( document ).ready(function() {
-      $("#text").keyup(function (e) {
+    $("#text").keyup(function (e) {
             if (e.keyCode == 13) {
-        var input = $("#text").val();
-        console.log(input);
-        $( "#test" ).prepend("<p>"+input+"</p>");
+        $.post("/"),{
+            message: $("#text").val()
+        }
         }
         });
     $("#button").click({'tag': 11}, function (e) {
@@ -23,15 +23,8 @@ $( document ).ready(function() {
         $( "#test" ).prepend("<p>"+input+"</p>");
     });
 });
-var ajaxTest  = $.ajax(
-{
-   url: "/",   data: {
-    t: $('input[name=t]').val() }
-   ,   dataType: "json",   success: function(response)
-  {
 
-  }
-});
+
 </script>
 <body>
 <h1>Welcome to {{ name }}</h1>
