--- a/templates/simple.jinja2
+++ b/templates/simple.jinja2
@@ -9,14 +9,23 @@
     function update(){
 
     }
-$( document ).ready(function() {
-    $("#text").keyup(function (e) {
-            if (e.keyCode == 13) {
-        $.post("/"),{
-            message: $("#text").val()
+$( document ).ready(function()
+{
+    $("#text").keyup(function (e)
+    {
+        if (e.keyCode == 13)
+        {
+            $.ajax({
+                type: "POST",
+                url: "/",
+                data: $("#test").val(),
+                success: function(response){
+                    $( "#test" ).prepend("<p>"+response.name+"</p>");
+                },
+                dataType: "json"
+            });
         }
-        }
-        });
+    });
     $("#button").click({'tag': 11}, function (e) {
         var input = $("#text").val();
         console.log(input);
