--- a/templates/simple.jinja2
+++ b/templates/simple.jinja2
@@ -13,20 +13,25 @@ $( document ).ready(function()
 {
     $("#text").keyup(function (e)
     {
-        if (e.keyCode == 13)
-        {
+        if (e.keyCode == 13) {
+            var input = $("#text").val();
+            console.log(input);
             $.ajax({
-                type: "POST",
                 url: "/",
-                data: $("#test").val(),
-                success: function(response){
-                    $( "#test" ).prepend("<p>"+response.name+"</p>");
+                type: "POST",
+                dataType: "json",
+                data: JSON.stringify({name: input}),
+                success: function (response) {
+                    console.log(response);
+                    $("#test").prepend('<p> hi there' + response.name + '</p>');
                 },
-                dataType: "json"
+                error: function (response) {
+                    console.log('error');
+                }
             });
         }
     });
-    $("#button").click({'tag': 11}, function (e) {
+    $("#button").click( function (e) {
         var input = $("#text").val();
         console.log(input);
         $( "#test" ).prepend("<p>"+input+"</p>");
