--- a/templates/simple.html
+++ b/templates/simple.html
@@ -7,6 +7,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="script.js"></script>
 <body>
+<h1> test page </h1>
 <input id = "text" type="text" onsubmit="Send()" />
 <input id="button" type="button" value="Send" />
 <div id="test"></div>
